--- a/src/docs/styles/styles.scss
+++ b/src/docs/styles/styles.scss
@@ -1,5 +1,5 @@
 @use "../../../node_modules/bootstrap/scss/bootstrap.scss";
-@use "docs.css";
+@use "bs5_docs";
 @import "https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900";
 
 .show-code {
