--- a/src/docs/templates/shell.html
+++ b/src/docs/templates/shell.html
@@ -123,7 +123,7 @@
         </li>
       </ul>
 
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="/docs/6/installation.html">Download</a>
+      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="/6/installing.html">Download</a>
     </div>
   </nav>
 </header>
@@ -131,10 +131,10 @@
 
 <nav class="bd-subnavbar py-2" aria-label="Secondary navigation">
   <div class="container-xxl d-flex align-items-md-center">
-    <form class="bd-search position-relative me-auto">
-      <input type="search" class="form-control" id="search-input" placeholder="Search docs..."
+    <!--<form class="bd-search position-relative me-auto" method='get' action='/'>
+      <input type="search" class="form-control" id="search-input" placeholder="Search..."
              aria-label="Search docs for..." autocomplete="off">
-    </form>
+    </form>-->
 
     <div class="dropdown ms-3">
       <button class="btn btn-bd-light dropdown-toggle" id="bd-versions" data-bs-toggle="dropdown" aria-expanded="false"
